--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "prepublish": "cake build"
   },
   "dependencies": {
+    "@activeprospect/indexer": "^1.3.1",
+    "dotaccess": "^1.0.5",
     "flat": "^1.3.0",
     "leadconduit-default": "^2.7.1",
-    "lodash": "^2.4.1"
+    "leadconduit-integration": "^0.2.0",
+    "lodash": "^2.4.2",
+    "mime-content": "0.0.7",
+    "mimeparse": "^0.1.4",
+    "xmlbuilder": "^8.2.2"
   },
   "devDependencies": {
     "chai": ">= 1.9.0",
