--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "node": ">=0.8.1"
   },
   "scripts": {
-    "test": "cake test",
-    "prepublish": "cake build"
+    "test": "cake test"
   },
   "dependencies": {
     "@activeprospect/indexer": "^1.3.1",
