--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=0.8.1"
   },
   "scripts": {
-    "test": "cake test"
+    "test": "mocha test/inbound"
   },
   "dependencies": {
     "@activeprospect/indexer": "^1.3.1",
