--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "type": "git",
     "url": "https://github.com/activeprospect/leadconduit-integration-standard.git"
   },
-  "engines": {
-    "node": ">=0.8.1"
-  },
   "scripts": {
-    "test": "cake test",
-    "prepublish": "cake build"
+    "test": "mocha test/inbound"
   },
   "dependencies": {
     "@activeprospect/indexer": "^1.3.1",
@@ -29,7 +25,6 @@
   },
   "devDependencies": {
     "chai": ">= 1.9.0",
-    "coffee-script": ">= 1.7.0",
     "leadconduit-types": "^4.8.2",
     "mocha": ">= 1.17.0"
   }
